--- a/client/src/app/ChangePassword/ChangePassword.css
+++ b/client/src/app/ChangePassword/ChangePassword.css
@@ -16,51 +16,19 @@
     padding-top: 2em;
   }
   
-  .tab-container {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    position: relative;
-    padding: .125em;
-    background-color: #FDFFBC;
-    border-radius: .57em;
-    margin: .625em 1.25em 0 20px;
-  }
-  
-  .indicator {
-    width: 50%;
-    height: 2.5em;
-    background: #FDD998;
-    position: absolute;
-    border-radius: .5em;
-    transition: all 0.2s ease-out;
-  }
-  
-  .tab {
-    width: 50%;
-    height: 2.5em;
-    position: relative;
-    z-index: 99;
-    background-color: transparent;
-    border: 0;
-    outline: none;
-    flex: none;
-    align-self: stretch;
-    flex-grow: 1;
-    cursor: pointer;
-    font-weight: 500;
+  .heading {
+    text-align: center;
+    margin: .5em;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    font-size: 2em;
     color: black;
-    font-size: 1em;
   }
   
-  .tab--1:hover ~ .indicator {
-    left: .125em;
-    background-color: #FDD998;
-  }
-  
-  .tab--2:hover ~ .indicator {
-    left: calc(50% - .125em);
-    background-color: #FDD998;
+  .instruction{
+    text-align: center;
+    margin: .5em 2em;
+    color: black;
   }
   
   .login-btn {
@@ -107,7 +75,8 @@
   .input-icon {
     height: 1.3em;
     width: 1.3em;
-    color: black}
+    color: black
+  }
   
   .input-field {
     background: none;
