--- a/client/src/app/signin/ChangePassword.css
+++ b/client/src/app/signin/ChangePassword.css
@@ -19,7 +19,6 @@
   .heading {
     text-align: center;
     margin: .5em;
-    color: rgb(255, 255, 255);
     font-weight: 700;
     font-size: 2em;
     color: black;
@@ -27,7 +26,7 @@
   
   .instruction{
     text-align: center;
-    margin: .5em;
+    margin: .5em 2em;
     color: black;
   }
   
