--- a/client/src/app/jobopening/Jobopening.css
+++ b/client/src/app/jobopening/Jobopening.css
@@ -1,14 +1,79 @@
-.jobopening-main{
+.outer-box{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    height: 100vh;
+    padding-top: 16vh;
+    background-color: #B8E8FC;
+  }
+
+  .container{
+    background: #BCCEF8;
+    width: 40em;
+    margin: auto;
+    text-align: center;
+    border-radius: 1em;
+    padding: 3em 0em;
+  }
+
+  .upper-txt{
+    padding: 1em;
+  }
+
+  .middle-txt{
+    /* padding: 1em; */
+    font-size: 3em;
+    font-weight: 1000;
+    letter-spacing: .2em;
+  }
+
+  .lower-txt{
+    padding: 1em;
+  }
+
+  .time-container{
+    display: flex;
+    margin: 2em 9em;
+  }
+
+  .time{
+    background: #C9F4AA;
+    padding: .5em;
+    border-radius: .5em;
+    margin: .7em;
+    width: 8em;
+  }
+
+  button {
+    max-width: 20em;
+    display: flex;
+    padding: 0.5rem 1.4rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    text-align: center;
+    text-transform: uppercase;
+    vertical-align: middle;
+    align-items: center;
+    border-radius: 0.5rem;
+    border: none;
+    gap: 0.75rem;
+    color: black;
+    background-color: #FDFFBC;
+    cursor: pointer;
+    transition: all .6s ease;
+    margin: auto;
 }
 
-.jobopening-section-1-container{
-    font-size: 3em;
-    text-align: center;
+.button svg {
+  height: 1.5em;
+  margin: .3em;
+}
+
+button:hover {
+    transform: scale(1.02);
+    background-color: #FDD998;
+}
+
+.top-buttons {
     display: flex;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
 }
