--- a/client/src/app/signin/Signin.css
+++ b/client/src/app/signin/Signin.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    height: 100vh;
+    min-height: 100vh;
     padding-top: 16vh;
     background-color: #B8E8FC;
   }
