signin and signup combine

--- a/client/src/app/achievers/achiverstory/achiverstory.css
+++ b/client/src/app/achievers/achiverstory/achiverstory.css
@@ -3,7 +3,7 @@
     min-height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: ;
+    align-items: center;
 }
 .achiever-outer-box{
 
