--- a/client/src/app/practice/Practice.css
+++ b/client/src/app/practice/Practice.css
@@ -10,13 +10,47 @@
 }
 
 /* DSA Sheet Section Starts Here */
-/* DSA Sheet Container : Section 1 CSS */
-.practice-dsa-sheet-container{
-    margin: 0.5em;
-    min-height: 20vh;
+.practice-dsa-sheet{
+    padding: 0.2em;
+    /* border: 1px solid black; */
+}
+
+/* Heading Section */
+.dsa-sheet-heading{
+    margin: 0 1.4em;
+    padding: 0.1em;
+    /* border: 1px solid greenyellow; */
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    padding: 0.2em;
+    align-items: center;
+    justify-content: space-between;
+    color: #000;
+}
+
+/* DSA Sheet Heading */
+.dsa-sheet-heading h4{
+    /* margin: 0.1em; */
+    padding: 0.1em;
+    font-size: 1.2em;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+/* See All Heading */
+.dsa-sheet-heading h5{
+    /* margin: 0.1em;
+    padding: 0.1em; */
+    font-size: 1em;
+    font-weight: 300;
+    cursor: pointer;
+}
+
+/* DSA Sheet Container : Section 1 CSS */
+.practice-dsa-sheet-container{
+    margin: 0.2em 0.4em;
+    min-height: 25vh;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 0.2em;
 }
 
