--- a/client/src/app/developers/Developers.css
+++ b/client/src/app/developers/Developers.css
@@ -1,14 +1,104 @@
-.developer-main {
+.outer-box{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    padding-top: 16vh;
+    padding-bottom: 1em;
+    background-color: #B8E8FC;
+  }
+
+  .container{
+    width: 98%;
+    margin: 1%;
+    background: #BCCEF8;
+    padding: 1em 0em;
+    display: flex;
+  }
+
+  .photo{
+    margin: 1em;
+    width: 29em;
+    height: 65vh;
+    background: #FAF4B7;
+  }
+
+  h3{
+    margin-left: 5px;
+    margin-bottom: 5px;
+    color: #333;
+  }
+
+  .description{
+    margin: 1em;
+    width: 29em;
+    height: 15vh;
+    background: #C9F4AA;
+    padding: 1em;
+  }
+
+  .image {
+    width: 100%;
+    height: 100%;
+    /* border-radius: 50%; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: .5em solid #FAF4B7;
+  }
+
+.social-links,.flex-center {
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
 }
 
-.developer-section-1-container {
-    font-size: 3em;
-    text-align: center;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
+.social-btn {
+  cursor: pointer;
+  height: 40px;
+  width: 40px;
+  color: #333;
+  border-radius: 10px;
+  box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+  background: #FAF4B7;
+  margin: 5px;
+  transition: 0.3s;
+  justify-content: center;
+  padding: .5em;
 }
+
+.social-btn svg {
+  height: 24px;
+  width: 24px;
+}
+
+.social-btn span {
+  width: 0px;
+  overflow: hidden;
+  transition: 0.3s;
+  text-align: center;
+  margin-left: 2px;
+}
+
+.social-btn:hover {
+  width: 120px;
+  border-radius: 5px;
+  background-color: #FDD998;
+}
+
+.social-btn:hover span {
+  padding: 2px;
+  width: 80px;
+}
+
+#twitter svg {
+  fill: #333;
+}
+
+#linkedin svg {
+  fill: #333;
+}
+
+#github {
+  fill: #333;
+}
+
