--- a/client/src/app/developers/Developers.css
+++ b/client/src/app/developers/Developers.css
@@ -39,7 +39,7 @@
   .image {
     width: 100%;
     height: 100%;
-    /* border-radius: 50%; */
+    /* /* border-radius: 50%;  */
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -48,8 +48,6 @@
 
 .social-links,.flex-center {
   display: flex;
-  /* justify-content: center;
-  align-items: center; */
 }
 
 .social-btn {
@@ -101,4 +99,3 @@
 #github {
   fill: #333;
 }
-
