--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;500&display=swap');
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -10,6 +9,10 @@ body{
   background-color: #000;
   color: #fff;
   font-family: 'Inter', sans-serif;
+}
+
+.avatar-dropdown{
+  position: absolute;
 }
 
 /* :root {
