--- a/client/src/app/signin/SignUp.css
+++ b/client/src/app/signin/SignUp.css
@@ -1,193 +1,236 @@
-.signin-main{
-    padding-top: 16vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #B8E8FC;
-    min-height: 100vh;    
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+* {
+	box-sizing: border-box;
 }
-.outer-box{
-    /* margin: 0; */
-    /* padding: 0; */
+
+.signin-singup-outer-box{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    /* margin-top: 5em; */
-    /* padding-bottom: 10vh; */
-  }
-
-.modal {
-    width: 32em;
-    margin: auto;
-    background: #BCCEF8;
-    border-radius: 1em;
-    padding-top: 2em;
+    min-height: 100vh;
+    padding-top: 16vh;
+    background-color: #B8E8FC;
+	background: #f6f5f7;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	font-family: 'Montserrat', sans-serif;
+	height: 100vh;
+	/* margin: -20px 0 50px; */
 }
 
-.signup-btn {
-    display: flex;
-    align-items: center;
-    padding: 1.25em;
+.signin-singup-outer-box h1 {
+	font-weight: bold;
+	margin: 0;
 }
 
-.upgrade-btn {
-    justify-content: center;
-    align-items: center;
-    width: 13.5em;
-    height: 2.5em;
-    background: #FDFFBC;
-    border-radius: .5em;
-    border: 0;
-    color: black;
-    font-size: 1em;
-    margin: auto;
+.signin-singup-outer-box h2 {
+	text-align: center;
 }
 
-.upgrade-btn:hover {
-    background-color: #FDD998;
-    cursor: pointer;
+.signin-singup-outer-box p {
+	font-size: 14px;
+	font-weight: 100;
+	line-height: 20px;
+	letter-spacing: 0.5px;
+	margin: 20px 0 30px;
 }
 
-.form {
-    display: flex;
-    flex-direction: column;
-    gap: .625em;
+.signin-singup-outer-box span {
+	font-size: 12px;
 }
 
-.field {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.5em;
-    border-radius: .5em;
-    padding: 0.6em;
-    background-color: #C9F4AA;
-    margin: .625em 1.25em 0em 1.25em;
+.signin-singup-outer-box a {
+	color: #333;
+	font-size: 14px;
+	text-decoration: none;
+	margin: 15px 0;
 }
 
-.input-icon {
-    height: 1.3em;
-    width: 1.3em;
-    color: black
+.signin-singup-outer-box button {
+	border-radius: 20px;
+	border: 1px solid #FF4B2B;
+	background-color: #FF4B2B;
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
 }
 
-.input-field {
-    background: none;
-    width: 100%;
-    color: black;
-    border: none;
-    outline: none;
+.signin-singup-outer-box button:active {
+	transform: scale(0.95);
 }
 
-.seperator {
-    width: calc(100%-1.25em);
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    gap: .125em;
-    color: black;
-    margin: 0.625em .625em;
+.signin-singup-outer-box button:focus {
+	outline: none;
 }
 
-.seperator .line {
-    display: inline-block;
-    width: 100%;
-    height: .07em;
-    border: 0;
-    background-color: black;
-    margin: auto;
+.signin-singup-outer-box button.ghost {
+	background-color: transparent;
+	border-color: #FFFFFF;
 }
 
-.seperator>p {
-    word-break: keep-all;
-    display: block;
-    text-align: center;
-    font-weight: 500;
-    font-size: 1em;
-    margin: auto;
-    color: black;
+.signin-singup-outer-box .form {
+	background-color: #FFFFFF;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 50px;
+	height: 100%;
+	text-align: center;
 }
 
-button {
-    max-width: 20em;
-    display: flex;
-    padding: 0.5rem 1.4rem;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    font-weight: 500;
-    text-align: center;
-    text-transform: uppercase;
-    vertical-align: middle;
-    align-items: center;
-    border-radius: 0.5rem;
-    border: none;
-    gap: 0.75rem;
-    color: black;
-    background-color: #FDFFBC;
-    cursor: pointer;
-    transition: all .6s ease;
-    margin-right: .5em;
-    margin-left: .5em;
+.signin-singup-outer-box input {
+	background-color: #eee;
+	border: none;
+	padding: 12px 15px;
+	margin: 8px 0;
+	width: 100%;
 }
 
-.button svg {
-    height: 1.5em;
+.signin-singup-outer-box .container {
+	background-color: #fff;
+	border-radius: 10px;
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+			0 10px 10px rgba(0,0,0,0.22);
+	position: relative;
+	overflow: hidden;
+	width: 768px;
+	max-width: 100%;
+	min-height: 480px;
 }
 
-button:hover {
-    transform: scale(1.02);
-    background-color: #FDD998;
-    cursor: pointer;
+.signin-singup-outer-box .form-container {
+	position: absolute;
+	top: 0;
+	height: 100%;
+	transition: all 0.6s ease-in-out;
 }
 
-.top-buttons {
-    display: flex;
-    margin: auto ;
+.signin-singup-outer-box .sign-in-container {
+	left: 0;
+	width: 50%;
+	z-index: 2;
 }
 
+.signin-singup-outer-box .container.right-panel-active .sign-in-container {
+	transform: translateX(100%);
+}
 
+.signin-singup-outer-box .sign-up-container {
+	left: 0;
+	width: 50%;
+	opacity: 0;
+	z-index: 1;
+}
 
-.tab-container {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    position: relative;
-    padding: .125em;
-    background-color: #FDFFBC;
-    border-radius: .57em;
-    margin: .625em 1.25em 0 20px;
-  }
-  
-  .indicator {
-    width: 50%;
-    height: 2.5em;
-    background: #FDD998;
-    position: absolute;
-    border-radius: .5em;
-    transition: all 0.2s ease-out;
-  }
-  
-  .tab {
-    /* width: 40%; */
-    height: 2.5em;
-    position: relative;
-    z-index: 99;
-    background-color: transparent;
-    border: 0;
-    outline: none;
-    flex: none;
-    align-self: stretch;
-    flex-grow: 1;
-    cursor: pointer;
-    font-weight: 500;
-    color: black;
-    font-size: 1em;
-  }
-  
-  .tab--1:hover ~ .indicator {
-    left: .125em;
-    background-color: #FDD998;
-  }
-  
-  .tab--2:hover ~ .indicator {
-    left: calc(50% - .125em);
-    background-color: #FDD998;
-  }
-  
+.signin-singup-outer-box .container.right-panel-active .sign-up-container {
+	transform: translateX(100%);
+	opacity: 1;
+	z-index: 5;
+	animation: show 0.6s;
+}
+
+@keyframes show {
+	0%, 49.99% {
+		opacity: 0;
+		z-index: 1;
+	}
+	
+	50%, 100% {
+		opacity: 1;
+		z-index: 5;
+	}
+}
+
+.signin-singup-outer-box .overlay-container {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 50%;
+	height: 100%;
+	overflow: hidden;
+	transition: transform 0.6s ease-in-out;
+	z-index: 100;
+}
+
+.signin-singup-outer-box .container.right-panel-active .overlay-container{
+	transform: translateX(-100%);
+}
+
+.signin-singup-outer-box .overlay {
+	background: #FF416C;
+	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 0 0;
+	color: #FFFFFF;
+	position: relative;
+	left: -100%;
+	height: 100%;
+	width: 200%;
+  	transform: translateX(0);
+	transition: transform 0.6s ease-in-out;
+}
+
+.signin-singup-outer-box .container.right-panel-active .overlay {
+  	transform: translateX(50%);
+}
+
+.signin-singup-outer-box .overlay-panel {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 40px;
+	text-align: center;
+	top: 0;
+	height: 100%;
+	width: 50%;
+	transform: translateX(0);
+	transition: transform 0.6s ease-in-out;
+}
+
+.signin-singup-outer-box .overlay-left {
+	transform: translateX(-20%);
+}
+
+.signin-singup-outer-box .container.right-panel-active .overlay-left {
+	transform: translateX(0);
+}
+
+.signin-singup-outer-box .overlay-right {
+	right: 0;
+	transform: translateX(0);
+}
+
+.signin-singup-outer-box .container.right-panel-active .overlay-right {
+	transform: translateX(20%);
+}
+
+.signin-singup-outer-box .social-container {
+	margin: 20px 0;
+}
+
+.signin-singup-outer-box .social-container a {
+	border: 1px solid #DDDDDD;
+	border-radius: 50%;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 5px;
+	height: 40px;
+	width: 40px;
+}
+.password-req{
+	color: #000;
+}
