--- a/client/src/app/userprofile/[handle]/UserProfile.css
+++ b/client/src/app/userprofile/[handle]/UserProfile.css
@@ -71,6 +71,8 @@
   
   .bottom-buttons {
     display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 1em 4.5em ;
   }
   
