--- a/client/src/app/achievers/[ReadMore]/readMore.css
+++ b/client/src/app/achievers/[ReadMore]/readMore.css
@@ -1,8 +1,8 @@
 .achiever-read-more-page{
     height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2em;
-    color: white;
+    padding-top: 13vh;
+}
+.selected-achiever-page-container{
+    height: 87vh;
+    
 }
