--- a/client/src/app/achievers/[ReadMore]/readMore.css
+++ b/client/src/app/achievers/[ReadMore]/readMore.css
@@ -1,8 +1,149 @@
-.achiever-read-more-page{
-    height: 100vh;
+.achiever-read-more-page {
+    min-height: 300vh;
     padding-top: 13vh;
+    background-color: #B8E8FC;
 }
-.selected-achiever-page-container{
+
+.selected-achiever-page-container {
     height: 87vh;
-    
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.before-fixed-achiever {
+    width: 38%;
+    margin: 0.2em;
+    padding: 0.2em;
+    height: 80vh;
+}
+
+.achiever-fixed-section-container {
+    min-height: 80vh;
+    width: 35%;
+    margin: 0.2em;
+    padding: 0.2em;
+    margin-left: 1em;
+    position: fixed;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #B8E8FC;
+    background-color: #BCCEF8;
+    border-radius: 0.5em;
+
+}
+
+.achiever-fixed-image{
+    width: 80%;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    object-fit: cover;
+    overflow: hidden;
+    border-radius: 0.5em;
+
+}
+
+.achiever-fixed-image img{
+    width: 100%;
+    overflow: hidden;
+    border-radius: 0.5em;
+
+}
+
+.achiever-fixed-description{
+    margin: 0.4em;
+    padding: 0.2em;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 80%;
+}
+
+.achiever-fixed-description h2{
+    font-size: 1.5em;
+    font-weight: 400;
+    padding: 0.1em;
+    margin-bottom: 0.1em;
+    color: #000;
+
+}
+
+.achiever-fixed-description h4{
+    font-size: 1em;
+    font-weight: 350;
+    padding: 0.1em;
+    color: #000;
+}
+
+.achiever-fixed-connect{
+    margin: 0.2em;
+    padding: 0.2em;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    width: 80%;
+    color: #000;
+}
+
+.achiever-fixed-connect a {
+    text-decoration: none;
+    display: inline-block;
+    color: #000;
+}
+
+/* Connect on hover transition */
+.achiever-fixed-connect a::after {
+    /* border: 1px solid grey; */
+    content: ' ';
+    display: block;
+    transform: scaleX(0);
+    margin: 0.1em;
+    border-bottom: 0.1em solid #000;
+    transition: transform 0.2s ease-in-out;
+    transform-origin: center;
+}
+
+.achiever-fixed-connect a:hover::after {
+    transform: scaleX(1);
+}
+
+.achiever-fixed-connect img {
+    width: 1em;
+    margin: 0.2em;
+    margin-bottom: 0.5em;
+}
+
+.achiever-dynamic-section-container {
+    width: 60%;
+    margin: 0 0.2em;
+    padding: 0 0.5em;
+    min-height: 80vh;
+    background-color: #B8E8FC;
+}
+
+.achiever-dynamic-section-container p{
+    line-height: 1.3;
+    letter-spacing: 0.7px;
+    color: #000;
+}
+
+.fixed-inside-dynamic-achiever-before{
+    width: 100%;
+    position: sticky;
+    top: 13vh;
+    padding: 1em;
+    background-color: #B8E8FC;
+}
+
+.fixed-inside-dynamic-achiever-after{
+    width: 100%;
+    position: sticky;
+    bottom: 0;
+    padding: 1em;
+    background-color: #B8E8FC;
 }
