--- a/client/src/app/achievers/[ReadMore]/readMore.css
+++ b/client/src/app/achievers/[ReadMore]/readMore.css
@@ -1,13 +1,14 @@
 .achiever-read-more-page {
-    min-height: 300vh;
+    min-height: 100vh;
     padding-top: 13vh;
     background-color: #B8E8FC;
 }
 
 .selected-achiever-page-container {
-    height: 87vh;
+    min-height: 87vh;
+    /* position: absolute; */
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     flex-wrap: wrap;
 }
 
@@ -22,6 +23,7 @@
     min-height: 80vh;
     width: 35%;
     margin: 0.2em;
+    margin-top: 1.5em;
     padding: 0.2em;
     margin-left: 1em;
     position: fixed;
