--- a/client/src/app/discussion/Discussion.css
+++ b/client/src/app/discussion/Discussion.css
@@ -5,12 +5,47 @@
 }
 
 .discussion-section-1-container{
-    font-size: 3em;
-    text-align: center;
+    min-height: 100vh;
+    padding-top: 13vh;
     display: flex;
-    height: 100vh;
+    flex-direction: column;
+    flex-wrap: wrap;
+    /* align-items: center; */
     justify-content: center;
-    align-items: center;
 }
 
-/* Single Live Discuss Section 1 */
+.live-single-discuss-container{
+    margin: 0.5em;
+    padding: 2em;
+    border: 1px solid red;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    border-radius: 0.4em;
+}
+
+.live-discussion-description{
+    width: 30vw;
+    height: 10vh;
+    margin: 0 2em;
+    padding: 0.5em;
+    display: flex;
+    align-items: center;
+    align-self: flex-start;
+}
+
+.live-discussion-image{
+    width: 40vw;
+    height: 60vh;
+}
+
+.live-single-discuss-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0.4em;
+    /* padding: 0.5em; */
+    cursor: pointer;
+    border: 1px solid green;
+}
+
