--- a/client/src/app/discussion/Discussion.css
+++ b/client/src/app/discussion/Discussion.css
@@ -10,17 +10,27 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    font-family: 'Inter';
     /* align-items: center; */
-    justify-content: center;
+    /* justify-content: center; */
+}
+
+.discussion-section-1-container h2{
+    margin: 0.6em 0.4em 0 0.4em;
+    padding: 0.5em;
+    font-size: 1.5em;
+    font-weight: 500;
+    /* letter-spacing: 0.6px; */
 }
 
 .live-single-discuss-container{
     margin: 0.5em;
-    padding: 2em;
-    border: 1px solid red;
+    padding: 1em 3em;
+    /* border: 1px solid red; */
+    height: 72vh;
     display: flex;
     align-items: center;
-    /* justify-content: center; */
+    justify-content: space-between;
     border-radius: 0.4em;
 }
 
@@ -34,9 +44,37 @@
     align-self: flex-start;
 }
 
+.live-discussion-description a{
+    text-decoration: none;
+}
+
+.live-discussion-description h3{
+    font-size: 1.3em;
+    font-weight: 400;
+    cursor: pointer;
+    text-decoration: none;
+    color: #fff;
+}
+
+.live-discussion-description h3::after{
+    content: ' ';
+    display: block;
+    transform: scaleX(0);
+    margin: 0.1em;
+    border-bottom: 0.1em solid #fff;
+    transition: transform 0.2s ease-in-out;
+    transform-origin: center; 
+}
+.live-discussion-description h3:hover::after{
+    transform: scaleX(1);
+}
+
 .live-discussion-image{
-    width: 40vw;
+    /* margin-left: 6vw; */
+    width: 45%;
     height: 60vh;
+    margin: 0 2em;
+    padding: 0.5em;
 }
 
 .live-single-discuss-container img{
@@ -44,8 +82,7 @@
     height: 100%;
     object-fit: cover;
     border-radius: 0.4em;
-    /* padding: 0.5em; */
     cursor: pointer;
-    border: 1px solid green;
+    /* border: 1px solid green; */
 }
 
