--- a/client/src/app/discussion/Discussion.css
+++ b/client/src/app/discussion/Discussion.css
@@ -1,21 +1,20 @@
-.discussion-main{
+.discussion-main {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.discussion-section-1-container{
+/* Section 1 Starts here */
+.discussion-section-1-container {
     min-height: 100vh;
     padding-top: 13vh;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     font-family: 'Inter';
-    /* align-items: center; */
-    /* justify-content: center; */
 }
 
-.discussion-section-1-container h2{
+.discussion-section-1-container h2 {
     margin: 0.6em 0.4em 0 0.4em;
     padding: 0.5em;
     font-size: 1.5em;
@@ -23,7 +22,7 @@
     /* letter-spacing: 0.6px; */
 }
 
-.live-single-discuss-container{
+.live-single-discuss-container {
     margin: 0.5em;
     padding: 1em 3em;
     /* border: 1px solid red; */
@@ -34,7 +33,7 @@
     border-radius: 0.4em;
 }
 
-.live-discussion-description{
+.live-discussion-description {
     width: 30vw;
     height: 10vh;
     margin: 0 2em;
@@ -44,11 +43,11 @@
     align-self: flex-start;
 }
 
-.live-discussion-description a{
+.live-discussion-description a {
     text-decoration: none;
 }
 
-.live-discussion-description h3{
+.live-discussion-description h3 {
     font-size: 1.3em;
     font-weight: 400;
     cursor: pointer;
@@ -56,20 +55,21 @@
     color: #fff;
 }
 
-.live-discussion-description h3::after{
+.live-discussion-description h3::after {
     content: ' ';
     display: block;
     transform: scaleX(0);
     margin: 0.1em;
     border-bottom: 0.1em solid #fff;
     transition: transform 0.2s ease-in-out;
-    transform-origin: center; 
+    transform-origin: center;
 }
-.live-discussion-description h3:hover::after{
+
+.live-discussion-description h3:hover::after {
     transform: scaleX(1);
 }
 
-.live-discussion-image{
+.live-discussion-image {
     /* margin-left: 6vw; */
     width: 45%;
     height: 60vh;
@@ -77,12 +77,16 @@
     padding: 0.5em;
 }
 
-.live-single-discuss-container img{
+.live-single-discuss-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 0.4em;
     cursor: pointer;
-    /* border: 1px solid green; */
 }
 
+/* Section 2 Starts here */
+.discussion-section-2-container {
+    min-height: 87vh;
+    border: 1px solid red;
+}
