--- a/client/src/app/practice/CoreSubject.css
+++ b/client/src/app/practice/CoreSubject.css
@@ -3,6 +3,7 @@
     /* border: 1px solid black; */
     margin: 0.3em 0.3em;
     padding: 0.6em;
+    width: fit-content;
     background-color: #BCCEF8;
     border-radius: 2em;
     cursor: pointer;
