--- a/client/src/app/practice/Practice.css
+++ b/client/src/app/practice/Practice.css
@@ -131,6 +131,8 @@
     width: 58vw;
     margin: 0.1em;
     padding: 0.1em;
+    background-color: #FAF4B7;
+    border-radius: 0.4em;
 }
 
 .practice-title-heading {
@@ -181,6 +183,9 @@
     width: 19vw;
     margin: 0.1em;
     padding: 0.1em;
+    /* min-height: 4vh; */
+    background-color: #FAF4B7;
+
 }
 
 /* Title Section */
@@ -199,6 +204,15 @@
     margin: 0.1em;
 }
 
+.different-topics{
+    /* border: 1px solid firebrick; */
+    padding: 0.5em;
+    margin: 0.4em;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
 /* Responsive Tags Container */
 
 
@@ -208,6 +222,8 @@
     width: 19vw;
     margin: 0.1em;
     padding: 0.1em;
+    background-color: #FAF4B7;
+    border-radius: 0.4em;
 }
 
 .trending-companies-title {
@@ -224,6 +240,15 @@
     font-weight: 400;
     color: #000;
     margin: 0.1em;
+}
+
+.different-companies{
+    /* border: 1px solid firebrick; */
+    padding: 0.5em;
+    margin: 0.4em;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 /* Responsive Trending Companies Container */
