--- a/client/src/app/practice/Practice.css
+++ b/client/src/app/practice/Practice.css
@@ -173,6 +173,33 @@
     justify-content: center;
 }
 
+.more-question-pages{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0.2em;
+    margin-top: 1em;
+    padding: 0.2em;
+    overflow: hidden;
+    height: 10vh;
+    width:30%;
+    margin-left: 35%;
+}
+
+.more-question-pages img{
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.more-question-pages h3{
+    font-size: 1.3em;
+    font-weight: 500;
+    color: #000;
+    margin: 0 0.6em;
+    cursor: pointer;
+}
+
 /* Responsive practice Container */
 
 
