--- a/client/src/app/developers/Developers.css
+++ b/client/src/app/developers/Developers.css
@@ -4,13 +4,13 @@
     box-sizing: border-box;
     padding-top: 16vh;
     padding-bottom: 1em;
-    background-color: #B8E8FC;
+    /* background-color: #B8E8FC; */
+    background: #BCCEF8;
   }
 
   .container{
     /* width: 98%; */
     /* margin: 1%; */
-    background: #BCCEF8;
     padding: 1em 0em;
     display: flex;
     flex-wrap: wrap;
@@ -22,6 +22,7 @@
     margin: 1em;
     /* width: 29em; */
     height: 65vh;
+    border-radius: 50%;
     background: #FAF4B7;
   }
 .developer{
@@ -37,16 +38,20 @@
 
   .description{
     margin: 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     /* width: 29em; */
     height: 15vh;
-    background: #C9F4AA;
+    /* background: #C9F4AA; */
     padding: 1em;
   }
 
   .image {
     width: 100%;
-    height: 100%;
-    /* /* border-radius: 50%;  */
+    height: 100%;   
+     border-radius: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
