Single Practice Complete

--- a/client/src/app/practice/PracticeSingle.css
+++ b/client/src/app/practice/PracticeSingle.css
@@ -9,6 +9,7 @@
 
 .single-practice-question-container a{
     text-decoration: none;
+    color: #000;
 }
 
 .single-practice-question-container h3{
