--- a/client/src/app/signin/SignUp.css
+++ b/client/src/app/signin/SignUp.css
@@ -5,6 +5,10 @@
 	box-sizing: border-box;
 }
 
+span{
+	color: black;
+}
+
 .signin-singup-outer-box{
     margin: 0;
     padding: 0;
@@ -12,7 +16,7 @@
     min-height: 100vh;
     padding-top: 16vh;
     background-color: #B8E8FC;
-	background: #f6f5f7;
+	/* background: #f6f5f7; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -51,10 +55,10 @@
 }
 
 .signin-singup-outer-box button {
-	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
-	color: #FFFFFF;
+	border-radius: 5px;
+	border: none;
+	background-color: #C9F4AA;
+	color: black;
 	font-size: 12px;
 	font-weight: bold;
 	padding: 12px 45px;
@@ -72,12 +76,18 @@
 }
 
 .signin-singup-outer-box button.ghost {
-	background-color: transparent;
-	border-color: #FFFFFF;
+	background-color: #FDFFBC;
+	border-radius: 5px;
+	border: none;
+	color: black;
+}
+
+button.ghost:hover{
+	background-color: #FDD998;
 }
 
 .signin-singup-outer-box .form {
-	background-color: #FFFFFF;
+	background-color: #FDFFBC;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -88,7 +98,7 @@
 }
 
 .signin-singup-outer-box input {
-	background-color: #eee;
+	background-color: #C9F4AA;
 	border: none;
 	padding: 12px 15px;
 	margin: 8px 0;
@@ -96,7 +106,7 @@
 }
 
 .signin-singup-outer-box .container {
-	background-color: #fff;
+	background-color: #FDFFBC;
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
@@ -166,13 +176,13 @@
 }
 
 .signin-singup-outer-box .overlay {
-	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background: #C9F4AA;
+	/* background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+	background: linear-gradient(to right, #FF4B2B, #FF416C); */
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
-	color: #FFFFFF;
+	color: black;
 	position: relative;
 	left: -100%;
 	height: 100%;
