--- a/client/src/app/userprofile/[handle]/UserProfile.css
+++ b/client/src/app/userprofile/[handle]/UserProfile.css
@@ -1,4 +1,4 @@
-.outer-box{
+.userprofile-outer-box{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -41,7 +41,7 @@
     font-weight: 500;
   }
   
-  button {
+  .userprofile-outer-box button {
     max-width: 20em;
     display: flex;
     padding: 0.5rem 1.4rem;
