--- a/client/src/app/universal/footer.css
+++ b/client/src/app/universal/footer.css
@@ -1,6 +1,6 @@
 .footer {
     height: 7em;
-    width: 100vw;
+    width: 100%;
     background-color: #C9F4AA;
 }
 
@@ -9,7 +9,7 @@
     text-align: center;
     font-size: 30px;
     font-weight: 500;
-    padding: 0.6em;
+    padding: 0.6em 0em;
 }
 
 .footer-lower-text {
@@ -17,10 +17,9 @@
     text-align: center;
 }
 
-/* Responsive Adjustments */
 @media screen and (max-width: 768px) {
     .footer-upper-text {
-        font-size: 24px; /* Adjust font size for smaller screens */
+        font-size: 24px; 
         padding: 0.4em;
     }
 }
