home and developers page

--- a/client/src/app/developers/Developers.css
+++ b/client/src/app/developers/Developers.css
@@ -1,62 +1,69 @@
-.outer-box {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
+/* :root {
+  --br: 20px;
+} */
+
+/* * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  padding-top: 16vh;
-  padding-bottom: 1em;
-  background: #BCCEF8;
-}
+} */
+
+/* body {
+  min-height: 100vh;
+  background: #f3f3f3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+} */
 
 .container {
-  padding: 1em 0em;
+  text-align: center;
+}
+
+.row {
   display: flex;
   flex-wrap: wrap;
+  gap: 20px;
   justify-content: center;
-  align-items: center;
+  margin: 0 -10px;
 }
 
-.photo {
-  margin: 1em;
-  width: 100%;
-  max-width: 300px; /* Adjust maximum width for smaller screens */
-  height: 65vh;
+.card {
+  background: #fff;
+  padding: 30px;
+  border-radius: var(--br);
+  transition: 0.5s;
+  margin: 15px;
+  flex: 1;
+  max-width: 300px;
+}
+
+.card:hover {
+  box-shadow: 0px 3px 10px 5px #e9e9e9;
+}
+
+.card img {
+  max-width: 100%;
   border-radius: 50%;
-  background: #FAF4B7;
+  border: 4px solid var(--bc, #000);
 }
 
-.developer {
-  width: 100%;
-  max-width: 300px; /* Adjust maximum width for smaller screens */
+h1 {
+  margin: 20px 0;
 }
 
-h3 {
-  margin-left: 5px;
-  margin-bottom: 5px;
-  color: #333;
+h2 {
+  margin: 15px 0 5px;
 }
 
-.description {
-  margin: 1em;
+.social-links,
+.flex-center {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 100%;
-  padding: 1em;
-}
-
-.image {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  border: .5em solid #FAF4B7;
-}
-
-.social-links, .flex-center {
-  display: flex;
 }
 
 .social-btn {
@@ -65,12 +72,12 @@ h3 {
   width: 40px;
   color: #333;
   border-radius: 10px;
-  box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
-  background: #FAF4B7;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+  background: #faf4b7;
   margin: 5px;
   transition: 0.3s;
   justify-content: center;
-  padding: .5em;
+  padding: 0.5em;
 }
 
 .social-btn svg {
@@ -89,7 +96,7 @@ h3 {
 .social-btn:hover {
   width: 120px;
   border-radius: 5px;
-  background-color: #FDD998;
+  background-color: #fdd998;
 }
 
 .social-btn:hover span {
@@ -109,14 +116,9 @@ h3 {
   fill: #333;
 }
 
-/* Responsive Adjustments */
-@media screen and (max-width: 768px) {
-  .container {
-      padding: 1em; /* Adjust padding for smaller screens */
-  }
-  
-  .photo, .developer, .description {
-      max-width: none;
-      width: 100%;
+/* Media Queries */
+@media (max-width: 768px) {
+  .card {
+    margin: 15px auto;
   }
 }
