--- a/client/src/app/Home.css
+++ b/client/src/app/Home.css
@@ -8,6 +8,7 @@
     --accent-col: #14203e;
     --white: #fff;
     --black: #000;
+    --dark-blue: #11161A;
     --14r: 0.875rem;
     --18r: 1.125rem;
     --22r: 1.375rem;
@@ -15,35 +16,9 @@
     --66r: 4.125rem;
   }
   
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-    color: var(--accent-col);
-    font-family: "IBM Plex Sans", sans-serif;
-  }
-  
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p {
-    padding: 0;
-    margin: 0;
-  }
-  
-  a {
-    @include anchor-reset;
-  }
-  
-  body {
-    background: beige;
-    margin: 0;
-    padding: 0;
-  }
-  
+
+
+
   .w-100 {
     width: 100%;
   }
@@ -53,7 +28,9 @@
     justify-content: center;
     align-items: center;
   }
-  
+  .cta-btn a{
+    text-decoration: none;
+  }
   .column {
     flex-direction: column;
   }
@@ -95,10 +72,12 @@
   }
 
   .hero-title {
+    color: #11161A;
     max-width: 500px;
   }
   
   .hero-desc {
+    color: #999;
     padding: 0 0 2.5rem;
     max-width: 600px;
   }
@@ -181,6 +160,7 @@ p {
   line-height: 21px;
 }
 .section{
+  min-height: 100vh;
   background-color: #000;
   padding: 5em;
 }
@@ -205,7 +185,7 @@ p {
 
 .number {
   margin-bottom: 14px;
-  color: #8472fc;
+  color: #11161A;
   font-weight: 700;
 }
 
@@ -238,7 +218,8 @@ p {
   }
   
   .setup-pill {
-    height: auto;
+    /* min-height: 40vh; */
+    /* height: auto; */
   }
   
   .works-column {
